# germ

./: .gitignore  Cargo.toml
assets/: default_config.toml
core/: Cargo.toml
src/: constants.rs  main.rs  shell.rs  ui.rs
src/app/: mod.rs
src/config/: mod.rs
src/shell/: mod.rs  stream.rs
src/stream/: mod.rs
src/ui/: input.rs  mod.rs
src/ui/backend/: conrod.rs  mod.rs
src/ui/backend/conrod/: mod.rs  text.rs
src/ui/backend/gtk/: main_window.glade  mod.rs
stream/: Cargo.toml
stream/src/: byte_stream.rs  lib.rs
